--- a/app/src/main/res/layout/activity_basic_information.xml
+++ b/app/src/main/res/layout/activity_basic_information.xml
@@ -11,215 +11,197 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/gray_25"
-        android:paddingHorizontal="20dp">
+        android:paddingHorizontal="20dp"
+        tools:context=".ui.basicinformation.BasicInformationActivity">
 
-        <ScrollView
+        <TextView
+            android:id="@+id/tv_basic_information_title"
+            style="@style/T_700_26_31_03"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text="@string/basic_information_title"
+            android:textColor="@color/gray_900"
+            app:layout_constraintBottom_toTopOf="@+id/tv_basic_information_sub_title"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_basic_information_sub_title"
+            style="@style/T_500_16_24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="44dp"
+            android:text="@string/basic_information_sub_title"
+            android:textColor="@color/gray_700"
+            app:layout_constraintBottom_toTopOf="@+id/cl_nick_name"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_nick_name"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:fillViewport="true"
-            android:scrollbars="none"
-            app:layout_constraintBottom_toTopOf="@+id/btn_complete"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toTopOf="@+id/cl_birth_date">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <TextView
+                android:id="@+id/tv_nick_name"
+                style="@style/T_600_14_16_71"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/nick_name"
+                android:textColor="@color/gray_700"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/iv_nick_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:src="@drawable/ic_check"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_nick_name"
+                app:layout_constraintStart_toEndOf="@+id/tv_nick_name"
+                app:layout_constraintTop_toTopOf="@+id/tv_nick_name" />
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:context=".ui.basicinformation.BasicInformationActivity">
+                android:layout_marginTop="8dp"
+                android:textColorHint="@color/gray_500"
+                app:hintEnabled="false"
+                app:hintTextAppearance="@style/T_500_16_19_09"
+                app:layout_constraintTop_toBottomOf="@+id/tv_nick_name">
 
-                <TextView
-                    android:id="@+id/tv_basic_information_title"
-                    style="@style/T_700_26_31_03"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="110dp"
-                    android:text="@string/basic_information_title"
-                    android:textColor="@color/gray_900"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tv_basic_information_sub_title"
-                    style="@style/T_500_16_24"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/basic_information_sub_title"
-                    android:textColor="@color/gray_700"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_basic_information_title" />
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cl_nick_name"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_nick_name"
+                    style="@style/T_600_16_19_09"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="44dp"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_basic_information_sub_title">
+                    android:background="@drawable/bg_basic_information_edittext"
+                    android:hint="@string/nick_name_hint"
+                    android:maxLength="10"
+                    android:padding="16dp" />
 
-                    <TextView
-                        android:id="@+id/tv_nick_name"
-                        style="@style/T_600_14_16_71"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/nick_name"
-                        android:textColor="@color/gray_700"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-                    <ImageView
-                        android:id="@+id/iv_nick_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:src="@drawable/ic_check"
-                        app:layout_constraintBottom_toBottomOf="@+id/tv_nick_name"
-                        app:layout_constraintStart_toEndOf="@+id/tv_nick_name"
-                        app:layout_constraintTop_toTopOf="@+id/tv_nick_name" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:textColorHint="@color/gray_500"
-                        app:hintEnabled="false"
-                        app:hintTextAppearance="@style/T_500_16_19_09"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_nick_name">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_birth_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toTopOf="@+id/cl_gender">
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/et_nick_name"
-                            style="@style/T_600_16_19_09"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/bg_basic_information_edittext"
-                            android:hint="@string/nick_name_hint"
-                            android:maxLength="10"
-                            android:padding="16dp" />
+            <TextView
+                android:id="@+id/tv_birth_date"
+                style="@style/T_600_14_16_71"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/birth_date"
+                android:textColor="@color/gray_700"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                    </com.google.android.material.textfield.TextInputLayout>
+            <ImageView
+                android:id="@+id/iv_birth_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:src="@drawable/ic_check"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_birth_date"
+                app:layout_constraintStart_toEndOf="@+id/tv_birth_date"
+                app:layout_constraintTop_toTopOf="@+id/tv_birth_date" />
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColorHint="@color/gray_500"
+                app:hintEnabled="false"
+                app:hintTextAppearance="@style/T_500_16_19_09"
+                app:layout_constraintTop_toBottomOf="@+id/tv_birth_date">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cl_birth_date"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_birth_date"
+                    style="@style/T_600_16_19_09"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    app:layout_constraintTop_toBottomOf="@+id/cl_nick_name">
+                    android:background="@drawable/bg_basic_information_edittext"
+                    android:hint="@string/birth_date_hint"
+                    android:maxLength="10"
+                    android:padding="16dp" />
 
-                    <TextView
-                        android:id="@+id/tv_birth_date"
-                        style="@style/T_600_14_16_71"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/birth_date"
-                        android:textColor="@color/gray_700"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-                    <ImageView
-                        android:id="@+id/iv_birth_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:src="@drawable/ic_check"
-                        app:layout_constraintBottom_toBottomOf="@+id/tv_birth_date"
-                        app:layout_constraintStart_toEndOf="@+id/tv_birth_date"
-                        app:layout_constraintTop_toTopOf="@+id/tv_birth_date" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:textColorHint="@color/gray_500"
-                        app:hintEnabled="false"
-                        app:hintTextAppearance="@style/T_500_16_19_09"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_birth_date">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_gender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="163dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_complete">
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/et_birth_date"
-                            style="@style/T_600_16_19_09"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/bg_basic_information_edittext"
-                            android:hint="@string/birth_date_hint"
-                            android:maxLength="10"
-                            android:padding="16dp" />
+            <TextView
+                android:id="@+id/tv_gender"
+                style="@style/T_600_14_16_71"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/gender"
+                android:textColor="@color/gray_700"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                    </com.google.android.material.textfield.TextInputLayout>
+            <ImageView
+                android:id="@+id/iv_gender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:src="@drawable/ic_check"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_gender"
+                app:layout_constraintStart_toEndOf="@+id/tv_gender"
+                app:layout_constraintTop_toTopOf="@+id/tv_gender" />
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_gender">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cl_gender"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    app:layout_constraintTop_toBottomOf="@+id/cl_birth_date">
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_gender_man"
+                    style="@style/T_500_16_19_09"
+                    android:layout_width="0dp"
+                    android:layout_height="52dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_gender_button"
+                    android:enabled="false"
+                    android:stateListAnimator="@null"
+                    android:text="@string/man"
+                    android:textColor="@color/gray_500" />
 
-                    <TextView
-                        android:id="@+id/tv_gender"
-                        style="@style/T_600_14_16_71"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/gender"
-                        android:textColor="@color/gray_700"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_gender_woman"
+                    style="@style/T_500_16_19_09"
+                    android:layout_width="0dp"
+                    android:layout_height="52dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_gender_button"
+                    android:stateListAnimator="@null"
+                    android:text="@string/woman"
+                    android:textColor="@color/gray_500" />
 
-                    <ImageView
-                        android:id="@+id/iv_gender"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:src="@drawable/ic_check"
-                        app:layout_constraintBottom_toBottomOf="@+id/tv_gender"
-                        app:layout_constraintStart_toEndOf="@+id/tv_gender"
-                        app:layout_constraintTop_toTopOf="@+id/tv_gender" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_gender">
-
-                        <androidx.appcompat.widget.AppCompatButton
-                            android:id="@+id/btn_gender_man"
-                            style="@style/T_500_16_19_09"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@drawable/bg_gender_button"
-                            android:enabled="false"
-                            android:stateListAnimator="@null"
-                            android:text="@string/man"
-                            android:textColor="@color/gray_500" />
-
-                        <androidx.appcompat.widget.AppCompatButton
-                            android:id="@+id/btn_gender_woman"
-                            style="@style/T_500_16_19_09"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/bg_gender_button"
-                            android:stateListAnimator="@null"
-                            android:text="@string/woman"
-                            android:textColor="@color/gray_500" />
-
-                    </androidx.appcompat.widget.LinearLayoutCompat>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </ScrollView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_complete"
             style="@style/T_600_16_19_2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="56dp"
             android:layout_marginBottom="40dp"
             android:background="@drawable/bg_complete_button"
             android:stateListAnimator="@null"
