--- a/app/src/main/res/layout/fragment_home_exchange.xml
+++ b/app/src/main/res/layout/fragment_home_exchange.xml
@@ -6,13 +6,100 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/home_exchange"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+        <View
+            android:id="@+id/view_divider_1"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@color/gray_100"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_pass_held"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_marginTop="24dp"
+            android:paddingHorizontal="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/view_divider_1">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/sr_orange50_all8">
+
+                <ImageView
+                    android:id="@+id/iv_ticket"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="20dp"
+                    android:src="@drawable/ic_ticket"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    style="@style/T_600_16_22_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:text="@string/pass_held"
+                    android:textColor="@color/gray_900"
+                    app:layout_constraintBottom_toBottomOf="@+id/iv_ticket"
+                    app:layout_constraintStart_toEndOf="@id/iv_ticket"
+                    app:layout_constraintTop_toTopOf="@id/iv_ticket" />
+
+                <TextView
+                    style="@style/T_600_16_22_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:text="2개"
+                    android:textColor="@color/orange_500"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tl_home_exchange"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:layout_marginTop="26sp"
+            app:layout_constraintTop_toBottomOf="@+id/cl_pass_held"
+            app:tabBackground="@drawable/bg_bottom_gray100"
+            app:tabIndicator="@drawable/bg_tab_indicator"
+            app:tabIndicatorAnimationMode="linear"
+            app:tabIndicatorColor="@color/gray_900"
+            app:tabIndicatorFullWidth="false"
+            app:tabPaddingBottom="8dp"
+            app:tabSelectedTextColor="@color/gray_900"
+            app:tabTextAppearance="@style/T_600_15_21_88"
+            app:tabTextColor="@color/gray_500">
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/requested_details" />
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/received_details" />
+
+        </com.google.android.material.tabs.TabLayout>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vp_home_exchange"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tl_home_exchange" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
