--- a/component/src/main/res/values/text-styles.xml
+++ b/component/src/main/res/values/text-styles.xml
@@ -28,6 +28,11 @@
         <item name="android:lineHeight">19.6dp</item>
     </style>
 
+    <style name="T_600_15_21_88" parent="pretendard600">
+        <item name="android:textSize">15sp</item>
+        <item name="android:lineHeight">21.88dp</item>
+    </style>
+
     <style name="T_600_16_22_4" parent="pretendard600">
         <item name="android:textSize">16sp</item>
         <item name="android:lineHeight">22.4dp</item>
