--- a/app/src/main/res/layout/activity_basic_information.xml
+++ b/app/src/main/res/layout/activity_basic_information.xml
@@ -14,34 +14,44 @@
         android:paddingHorizontal="20dp"
         tools:context=".ui.join.BasicInformationActivity">
 
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:importantForAccessibility="no"
+            android:src="@drawable/ic_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/tv_basic_information_title"
             style="@style/T_700_26_36_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
             android:text="@string/basic_information_title"
             android:textColor="@color/gray_900"
-            app:layout_constraintBottom_toTopOf="@+id/tv_basic_information_sub_title"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_back" />
 
         <TextView
             android:id="@+id/tv_basic_information_sub_title"
             style="@style/T_500_16_22_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
+            android:layout_marginTop="8dp"
             android:text="@string/basic_information_sub_title"
             android:textColor="@color/gray_700"
-            app:layout_constraintBottom_toTopOf="@+id/cl_nickname"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_basic_information_title" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_nickname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toTopOf="@+id/cl_birth_date">
+            android:layout_marginTop="54dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_basic_information_sub_title">
 
             <TextView
                 android:id="@+id/tv_nickname"
@@ -58,6 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
+                android:importantForAccessibility="no"
                 android:src="@drawable/ic_check"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_nickname"
                 app:layout_constraintStart_toEndOf="@+id/tv_nickname"
@@ -90,8 +101,8 @@
             android:id="@+id/cl_birth_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toTopOf="@+id/cl_gender">
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@id/cl_nickname">
 
             <TextView
                 android:id="@+id/tv_birth_date"
@@ -140,8 +151,8 @@
             android:id="@+id/cl_gender"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="163dp"
-            app:layout_constraintBottom_toTopOf="@+id/btn_complete">
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@id/cl_birth_date">
 
             <TextView
                 android:id="@+id/tv_gender"
@@ -158,6 +169,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
+                android:importantForAccessibility="no"
                 android:src="@drawable/ic_check"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_gender"
                 app:layout_constraintStart_toEndOf="@+id/tv_gender"
