--- a/app/src/main/res/layout/activity_join_complete.xml
+++ b/app/src/main/res/layout/activity_join_complete.xml
@@ -14,6 +14,16 @@
         tools:context=".ui.join.JoinCompleteActivity">
 
         <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:importantForAccessibility="no"
+            android:src="@drawable/ic_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
             android:id="@+id/iv_check_complete"
             android:layout_width="64dp"
             android:layout_height="64dp"
