--- a/app/src/main/res/layout/fragment_home_search.xml
+++ b/app/src/main/res/layout/fragment_home_search.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="20dp"
-            android:paddingTop="24dp"
+            android:paddingTop="26dp"
             android:paddingBottom="16dp"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -84,6 +84,13 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <View
+            android:id="@+id/view_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_100"
+            app:layout_constraintTop_toBottomOf="@id/cl_home_top_bar"/>
+
         <androidx.core.widget.NestedScrollView
             android:id="@+id/ns_home_search"
             android:layout_width="match_parent"
@@ -91,7 +98,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cl_home_top_bar">
+            app:layout_constraintTop_toBottomOf="@id/view_divider">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -322,12 +329,5 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
-
-        <View
-            bindVisible="@{viewModel.isVisibleShadow}"
-            android:layout_width="match_parent"
-            android:layout_height="16dp"
-            android:background="@drawable/gradient_black_8"
-            app:layout_constraintTop_toBottomOf="@id/cl_home_top_bar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
