--- a/app/src/main/res/layout/fragment_home_exchange.xml
+++ b/app/src/main/res/layout/fragment_home_exchange.xml
@@ -10,6 +10,7 @@
             android:id="@+id/view_divider_1"
             android:layout_width="0dp"
             android:layout_height="1dp"
+            android:layout_marginTop="16dp"
             android:background="@color/gray_100"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
