--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,18 +37,19 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bnv_main"
             android:layout_width="match_parent"
-            android:layout_height="96dp"
+            android:layout_height="92dp"
             android:layout_marginHorizontal="34dp"
             android:background="@color/white"
             app:itemActiveIndicatorStyle="@null"
             app:itemBackground="@drawable/selector_white_all8"
-            app:itemPaddingBottom="33dp"
-            app:itemPaddingTop="19dp"
+            app:itemIconSize="24dp"
+            app:itemIconTint="@drawable/selector_bottom_navigation_text_color"
+            app:itemPaddingBottom="27.5dp"
+            app:itemPaddingTop="19.5dp"
             app:itemTextAppearanceActive="@style/T_500_12_16_8"
             app:itemTextAppearanceActiveBoldEnabled="false"
             app:itemTextAppearanceInactive="@style/T_500_12_16_8"
             app:itemTextColor="@drawable/selector_bottom_navigation_text_color"
-            app:itemIconTint="@drawable/selector_bottom_navigation_text_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:menu="@menu/menu_bottom_navigation" />
 
